# miniroscpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  minirosConfig.cmake.in  package.xml  readme.md  roscxxConfig.cmake.in
examples/: CMakeLists.txt  bag_read.cpp  bag_write.cpp  bench_talker.cpp  examples.md  listener.cpp  log_demo.cpp  talker.cpp  websocket_server.cpp  websocket_test.html
src/: CMakeLists.txt  callback_queue.cpp  common.cpp  console.cpp  console_print.cpp  debug.cpp  errors.cpp  file_log.cpp  header.cpp  internal_config.h.in  launcher.cpp  names.cpp  observer.cpp  serialization.cpp  shape_shifter.cpp
src/b64/: b64decode.cpp  b64encode.cpp
src/http/: http_client.cpp  http_endpoint.cpp  http_filters.cpp  http_request.cpp  http_server.cpp  http_server_connection.cpp  http_tools.cpp  websocket.cpp  xmlrpc_handler.cpp  xmlrpc_request.cpp
src/http/endpoints/: filesystem.cpp  websocket.cpp  xmlrpc.cpp
src/internal/: local_log.cpp  profiling.cpp  sha1.cpp  static_write_buf.cpp  static_write_buf.h  watchdog.cpp  xml_tools.cpp
src/io/: callback_queue.cpp  io.cpp  poll_manager.cpp  poll_set.cpp
src/network/: host_info.cpp  net_adapter.cpp  net_address.cpp  network.cpp  socket.cpp  url.cpp
src/replacements/: CMakeLists.txt  command_line.cpp  errors.cpp  options_descriptor.cpp  program_options.cpp  progress_display.h  values.cpp  variables_map.cpp
src/replacements/program_options/: CMakeLists.txt  command_line.cpp  command_line.h  errors.cpp  errors.h  option.h  options_descriptor.cpp  program_options.cpp  program_options.h  values.cpp  values.h  values.inl  variables_map.cpp  variables_map.h
src/rosbag/: encrypt.cpp  main.cpp  play.cpp  player.cpp  record.cpp  recorder.cpp  time_translator.cpp
src/rosbag_storage/: aes_encryptor.cpp  bag.cpp  bag_player.cpp  buffer.cpp  bz2_stream.cpp  chunked_file.cpp  gpgme_utils.cpp  lz4_stream.cpp  message_instance.cpp  no_encryptor.cpp  query.cpp  stream.cpp  uncompressed_stream.cpp  view.cpp
src/rosconsole/: console.cpp  console_impl.h  console_print.cpp  file_log.cpp  local_log.cpp
src/roscore/: discovery.cpp  discovery.h  master.cpp  master.h  master_api.cpp  master_api.h  master_endpoints.cpp  master_endpoints.h  master_handler.cpp  master_handler.h  master_html_printers.cpp  master_internal.h  miniros_favicon.h  miniroscore.cpp  node_ref.cpp  node_ref.h  parameter_storage.cpp  parameter_storage.h  registration_manager.cpp  registration_manager.h  registrations.cpp  registrations.h  requester_info.cpp  requester_info.h  resolver.cpp  resolver.h  rosout.cpp  rosout.h
src/roslz4/: lz4s.c
src/rostime/: duration.cpp  rate.cpp  time.cpp
src/tf2/: transform_broadcaster.cpp
src/transport/: advertise_service_options.cpp  callback_queue.cpp  common.cpp  connection.cpp  connection_manager.cpp  file_log.cpp  http_server.cpp  http_server_connection.cpp  http_tools.cpp  init.cpp  internal_timer_manager.cpp  intraprocess_publisher_link.cpp  intraprocess_subscriber_link.cpp  io.cpp  master.cpp  master_link.cpp  message_deserializer.cpp  names.cpp  net_address.cpp  network.cpp  node_handle.cpp  param.cpp  poll_manager.cpp  poll_set.cpp  publication.cpp  publisher.cpp  publisher_link.cpp  rosout_appender.cpp  rpc_manager.cpp  service.cpp  service_client.cpp  service_client_link.cpp  service_manager.cpp  service_publication.cpp  service_server.cpp  service_server_link.cpp  single_subscriber_publisher.cpp  socket.cpp  spinner.cpp  statistics.cpp  (+15 more)
src/transport/transport/: transport.cpp  transport_tcp.cpp  transport_udp.cpp
src/xmlrpc/: XmlRpcClient.cpp  XmlRpcDispatch.cpp  XmlRpcServer.cpp  XmlRpcServerConnection.cpp  XmlRpcServerMethod.cpp  XmlRpcSocket.cpp  XmlRpcSource.cpp  XmlRpcUtil.cpp  XmlRpcValue.cpp  b64decode.cpp
test/: CMakeLists.txt  bag_read_test.cpp  gtest_printers.h  launch_test.sh  manage-master.cpp  readme.md
test/console_bridge/: console_TEST.cc
test/minibag/: test_aes_encryptor.cpp
test/roscpp/advanced/: CMakeLists.txt  check_master.cpp  crashes_under_gprof.cpp  get_master_information.cpp  handles.cpp  incrementing_sequence.cpp  init_no_sim_time_test.cpp  inspection.cpp  intraprocess_subscriptions.cpp  latching_publisher.cpp  left_right.cpp  loads_of_publishers.cpp  master_fixture.h  missing_call_to_shutdown_impl.cpp  multiple_init_fini.cpp  multiple_latched_publishers.cpp  multiple_subscriptions.cpp  name_not_remappable.cpp  name_remapping.cpp  name_remapping_with_ns.cpp  namespaces.cpp  nonconst_subscriptions.cpp  param_locale_avoidance_test.cpp  param_update_test.cpp  parameter_validation.cpp  params.cpp  pub_sub.cpp  publish_constantly.cpp  publish_empty.cpp  publish_n_fast.cpp  publish_onsub.cpp  publish_unadvertise.cpp  publisher.cpp  publisher_for_star_subscriber.cpp  publisher_rate.cpp  real_time_test.cpp  service_adv.cpp  service_adv_a.cpp  service_adv_multiple.cpp  service_adv_unadv.cpp  (+31 more)
test/roscpp/advanced/launch/: check_master.xml  check_master_false.xml  get_master_information.xml  global_remappings.xml  handles.xml  incrementing_sequence.xml  init_no_sim_time.xml  inspection.xml  intraprocess_subscriptions.xml  latching_publisher.xml  left_right.xml  loads_of_publishers.xml  local_remappings.xml  missing_call_to_shutdown.xml  multiple_init_fini.xml  multiple_latched_publishers.xml  multiple_subscriptions.xml  name_not_remappable.xml  name_remapping.xml  name_remapping_ROS_NAMESPACE.xml  namespaces.xml  no_remappings.xml  nonconst_subscriptions.xml  (+35 more)
test/roscpp/basic/: CMakeLists.txt  barrier.h  test_args.cpp  test_callback_queue.cpp  test_header.cpp  test_http.cpp  test_http_parser.cpp  test_names.cpp  test_net.cpp  test_observer.cpp  test_poll_set.cpp  test_socket.cpp  test_subscription_queue.cpp  test_transport_tcp.cpp  test_version.cpp
test/rostime/: test_duration.cpp  test_time.cpp
test/xmlrpc/: CMakeLists.txt  HelloTest.cpp  TestValues.cpp  mock_socket.cpp  test_base64.cpp  test_client.cpp  test_dispatch.cpp  test_dispatch_live.cpp  test_fixtures.cpp  test_fixtures.h  test_socket.cpp  test_system_mocks.c  test_ulimit.cpp  xmlrpcvalue_base64.cpp
(+272 files in other folders)
