<package>
  <name>miniroscpp</name>
  <version>0.1.0</version>
  <description>
    miniroscpp contains C++ code for doing things that are not necessarily ROS
    related, but are useful for multiple packages. This includes things like
    the MINIROS_DEPRECATED and MINIROS_FORCE_INLINE macros, as well as code for getting
    backtraces.

    All references to boost were replaced by standard libraries.

  </description>
  <maintainer email="dmitry.n.kargin@gmail.com">Dmitry Kargin</maintainer>
  <license>BSD</license>

  <url>Nope</url>
  <author>John Faust</author>
  <author>Dmitry Kargin</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
