<package>
  <name>miniroscpp</name>
  <version>0.1.0</version>
  <description>
    miniroscpp contains a stripped version of ROS C++ code.
    It should become a standalone ROS client without complex external dependencies.
  </description>
  <maintainer email="dmitry.n.kargin@gmail.com">Dmitry Kargin</maintainer>
  <license>BSD</license>

  <url>Nope</url>
  <author>John Faust</author>
  <author>Dmitry Kargin</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
