<package>
  <name>miniros</name>
  <version>0.2.2</version>
  <description>
    ROS CXX contains a stripped version of ROS C++ code.
    It should become a standalone ROS client without any complex external dependencies.
  </description>
  <maintainer email="dmitry.n.kargin@gmail.com">Dmitry Kargin</maintainer>
  <license>BSD</license>

  <url>Nope</url>
  <author>John Faust</author>
  <author>Dmitry Kargin</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
